name changes,  added trailing bar,  added contact info,  added contact icons, added english to morsecode

--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -2,19 +2,156 @@ $text-color: rgb(0, 0, 0);
 $primary-color: rgb(255, 0, 0);
 $secondary-color: rgb(255, 173, 173);
 
-.header_holder{
+.landing {
+  height: 60vh;
+  .icon {
+    height: 40px;
+    width: 40px;
+  }
+  .para {
+    width: 75%;
+    font-size: 1.7em;
+    margin-top: 35vh;
+    margin-left: 40px;
+    .button_red {
+      display: inline-block;
+      padding: 0.5em 0.8em;
+      border: 0.1em solid $primary-color;
+      background-color: $secondary-color;
+      border-radius: 0.12em;
+      box-sizing: border-box;
+      text-decoration: none;
+      font-family: "Roboto", sans-serif;
+      font-weight: 300;
+      text-align: center;
+      transition: all 0.2s;
+      color: $primary-color;
+
+      // &hover {
+      //     color: #000000;
+      //      background-color: #ffffff;
+      // }
+    }
+  }
+}
+.my_projects {
+  height: 97vh;
+  background-color: #b3f542;
+}
+.interactive {
+  height: 97vh;
+  background-color: #fcba03;
+  position: relative;
+  & .card {
+    margin: 0;
+    position: absolute;
+    border-radius: 12px;
+    padding: 25px;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    height: 85vh;
+    width: 92vw;
+    // margin: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+  }
+  & .header_title {
+    font-size: 4em;
+    font-weight: bold;
+    padding: 0;
+    // padding-top: 1vh;
+    margin: 0;
+    text-align: center;
+  }
+  & .text_area_holder {
+    margin-top: 2vh;
+  }
+  & .text_area {
+    min-height: 35vh;
+    max-height: 35vh;
+  }
+}
+
+.contact_me {
+  height: 97vh;
+  background-color: #b3f542;
+  position: relative;
+  & .card {
+    margin: 0;
+    position: absolute;
+    border-radius: 12px;
+    padding: 25px;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    height: 85vh;
+    width: 92vw;
+    // margin: 20px;
+    background-color: lightblue;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+  }
+  & .header_title {
+    font-size: 4em;
+    font-weight: bold;
+    padding: 0;
+    // padding-top: 1vh;
+    margin: 0;
+    text-align: center;
+  }
+}
+
+.end {
+  height: 12vh;
+  background-color: lightblue;
+  position: relative;
+  .icon {
+    height: 20px;
+    width: 20px;
+  }
+  & .card {
+    margin: 0;
+    position: absolute;
+    border-radius: 12px;
+    padding: 25px;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    height: 85vh;
+    width: 92vw;
+    // margin: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+  }
+  & .header_title {
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 0;
+    // padding-top: 1vh;
+    margin: 0;
+    text-align: center;
+  }
+}
+
+.header_holder {
   position: absolute;
   left: 0;
   top: 0;
-  margin-left: 2vw;
-  &--responsive{
+  margin-left: 30px;
+  &--responsive {
     @extend .header_holder;
+    margin-left: 44px;
+    margin-top: 14px;
   }
 }
 .header_logo {
   font-size: 10em;
-  margin-top: 1vw;
-  margin-left: 1vw;
 }
 .header_title {
   font-size: 8em;
@@ -25,11 +162,11 @@ $secondary-color: rgb(255, 173, 173);
   font-size: 1.5em;
   margin-top: 90px;
 }
-.header_links_row{
+.header_links_row {
   font-size: 1.5em;
   margin-top: 0;
 }
-.header_link{
+.header_link {
   padding-left: 21px;
   padding-right: 21px;
 }
@@ -40,31 +177,6 @@ $secondary-color: rgb(255, 173, 173);
   background-color: #ffffff;
 }
 
-.para {
-  width: 40vw;
-  font-size: 2em;
-  margin-top: 30vh;
-  margin-left: 60px;
-  .button {
-    display: inline-block;
-    padding: 0.5em 0.8em;
-    border: 0.1em solid $primary-color;
-    background-color: $secondary-color;
-    border-radius: 0.12em;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
-    text-align: center;
-    transition: all 0.2s;
-    color: $primary-color;
-
-    // &hover {
-    //     color: #000000;
-    //      background-color: #ffffff;
-    // }
-  }
-}
 .card {
   // display: inline-block;
   height: 55vh;
@@ -88,24 +200,153 @@ $secondary-color: rgb(255, 173, 173);
     font-size: 1em;
   }
 }
-.interactive {
-  height: 10em;
-  position: relative;
-  & .card {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    height: 85vh;
-    width: 92vw;
-    // margin: 20px;
-    background-color: #ffffff;
-  }
-  & .header_title{
-      margin-left: 4vw;
-      font-size: 3em;
-      font-weight: bold;
-  }
+
+.swiper-container {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
+.swiper-slide {
+  padding: 0;
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+// %transition_all_03s {
+//   transition:all .3s ease;
+// }
+// %backface_visibility_hidden{
+//   backface-visibility:hidden;
+//   -webkit-backface-visibility:hidden;
+// }
+
+// *, *:before, *:after {
+//   box-sizing: border-box;
+//   margin: 0;
+//   padding: 0;
+// }
+
+// .swiper-container {
+//   width: 100%;
+//   height: 28vw;
+//   transition:opacity .6s ease;
+//   &.swiper-container-coverflow{
+//     padding-top:2%;
+//   }
+//   &.loading{
+//     opacity:0;
+//     visibility:hidden;
+//   }
+//   &:hover{
+//     .swiper-button-prev,
+//     .swiper-button-next{
+//       transform:translateX(0);
+//       opacity:1;
+//       visibility:visible;
+//     }
+//   }
+// }
+// .swiper-wrapper{
+
+// }
+// .swiper-slide{
+//   background-position:center;
+//   width: 400px;
+//   height: 400px;
+//   margin: 0px;
+//   .swiper-slide-next{
+//   }
+//   .slide-inner{
+    
+//   }
+//   .entity-img{
+//     display:none;
+//   }
+//   .content{
+//     position:absolute;
+//     top:40%;
+//     left:0;
+//     width:40px;
+//     padding-left:5%;
+//     color:#fff;
+//     .title{
+//       font-size:2.6em;
+//       font-weight:bold;
+//       margin-bottom:30px;
+//     }
+//     .caption{
+//       display:block;
+//       font-size:13px;
+//       line-height:1.4;
+//     }
+//   }
+// }
+// [class^="swiper-button-"]{
+//   width:44px;
+//   opacity:0;
+//   visibility:hidden;
+//   @extend %transition_all_03s;
+// }
+// .swiper-button-prev{
+//   transform:translateX(50px);
+// }
+// .swiper-button-next{
+//   transform:translateX(-50px);
+// }
+// .swiper-container-horizontal{
+//   >.swiper-pagination-bullets{
+//     .swiper-pagination-bullet{
+//       margin:0 9px;
+//       position:relative;
+//       width:12px;
+//       height:12px;
+//       background-color:#fff;
+//       opacity:.4;
+//       @extend %transition_all_03s;
+//       &::before{
+//         content:'';
+//         position:absolute;
+//         top:50%;
+//         left:50%;
+//         width:18px;
+//         height:18px;
+//         transform:translate(-50%, -50%);
+//         border:0px solid #fff;
+//         border-radius:50%;
+//         @extend %transition_all_03s;
+//       }
+//       &:hover,
+//       &.swiper-pagination-bullet-active{
+//         opacity:1;
+//       }
+//       &.swiper-pagination-bullet-active{
+//         &::before{
+//           border-width:1px;
+//         }
+//       }
+//     }
+//   }
+// }
+
+// // Mediaqueries
+// @media(max-width:1180px){
+//   .swiper-slide{
+//     .content{
+//       .title{
+//         font-size:25px;
+//       }
+//       .caption{
+//         font-size:12px;
+//       }
+//     }
+//   }
+// }
+// @media(max-width:1023px){
+//   .swiper-container {
+//     height:40vw;
+//     &.swiper-container-coverflow{
+//       padding-top:0;
+//     }
+//   }
+// }
