--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -38,12 +38,17 @@ $secondary-color: rgb(255, 173, 173);
       font-size: 1.7em;
       font-size: clamp(1em, 3vw, 2em);
     }
+    // .email {
+    //   margin-left: 10px;
+
+    //   font-size: clamp(2em, 3.5vw, 4vw);
+    // }
   }
 }
 
 .my_projects {
   height: 93vh;
-  background-color: #b3f542;
+  background-color: #ffffff;
   position: relative;
   & .header_title {
     font-size: clamp(5em, 6vw, 8em);
@@ -54,7 +59,7 @@ $secondary-color: rgb(255, 173, 173);
 
 .interactive {
   height: 93vh;
-  background-color: #fcba03;
+  background-color: #ffe1a8;
   position: relative;
   & .card {
     display: block;
@@ -71,7 +76,7 @@ $secondary-color: rgb(255, 173, 173);
     text-align: center;
   }
   & .header_title {
-    font-size: clamp(5em, 6vw, 8em);
+    font-size: clamp(3.6em, 6vw, 8em);
     font-weight: bold;
     padding: 0;
     padding-top: 60px;
@@ -86,17 +91,43 @@ $secondary-color: rgb(255, 173, 173);
       margin: 5px;
       border-radius: 12px;
       resize: none;
+      text-transform: uppercase;
       &:active {
-        background-color: #b3f542;
+        background-color: #fffea8;
         border-radius: 12px;
       }
       &:hover {
-        background-color: #b3f542;
+        background-color: #fffea8;
         border-radius: 12px;
       }
       &:focus {
         border-radius: 12px;
-        background-color: #b3f542;
+        background-color: #fffea8;
+      }
+    }
+  }
+  & .text_area_holder_responsive {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90vw;
+    & .text_area_responsive {
+      // margin: 5px;
+      margin-bottom: 5px;
+      border-radius: 12px;
+      resize: none;
+      text-transform: uppercase;
+      &:active {
+        background-color: #fcba03;
+        border-radius: 12px;
+      }
+      &:hover {
+        background-color: #fcba03;
+        border-radius: 12px;
+      }
+      &:focus {
+        border-radius: 12px;
+        background-color: #fcba03;
       }
     }
   }
@@ -104,31 +135,34 @@ $secondary-color: rgb(255, 173, 173);
     font-size: clamp(2em, 6vw, 3em);
   }
   & .morse_helper_text {
+    margin-left: auto;
+    margin-right: auto;
+    width: 20em;
     font-size: clamp(1em, 6vw, 2em);
   }
 }
 
 // TODO about me not contact me
-.about_me {
-  height: 97vh;
-  background-color: #b3f542;
-  position: relative;
-  & .header_title {
-    font-size: clamp(5em, 6vw, 8em);
-    font-weight: bold;
-    padding: 0;
-    padding-top: 60px;
-    margin-left: 30px;
-  }
-}
+// .about_me {
+//   height: 97vh;
+//   background-color: #b3f542;
+//   position: relative;
+//   & .header_title {
+//     font-size: clamp(5em, 6vw, 8em);
+//     font-weight: bold;
+//     padding: 0;
+//     padding-top: 60px;
+//     margin-left: 30px;
+//   }
+// }
 
 .swiper_card {
-  margin-top: 250px;
-  margin-bottom: 500px;
+  margin-top: 200px;
+  margin-bottom: 700px;
   .card {
-    margin-top: 100px;
+    // margin-top: 50px;
     padding: 5px;
-    height: 45vh;
+    height: 40vh;
     width: 330px;
     border-radius: 12px;
     position: absolute;
@@ -137,6 +171,7 @@ $secondary-color: rgb(255, 173, 173);
     transform: translate(-50%, -50%);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     background-color: #ffffff;
+    transition: top ease 0.25s;
     & .image {
       margin: 0px;
       padding: 0px;
@@ -155,6 +190,9 @@ $secondary-color: rgb(255, 173, 173);
       margin-left: 10px;
       // font-size: 1em;
     }
+    &:hover {
+      top: -10px;
+    }
   }
 }
 
@@ -172,39 +210,40 @@ $secondary-color: rgb(255, 173, 173);
   height: 300px;
 }
 
-.end {
-  height: 12vh;
-  background-color: lightblue;
-  position: relative;
-  .icon {
-    height: 20px;
-    width: 20px;
-  }
-  & .card {
-    margin: 0;
-    position: absolute;
-    border-radius: 12px;
-    padding: 25px;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    height: 85vh;
-    width: 92vw;
-    // margin: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-  }
-  & .header_title {
-    font-size: 1.5em;
-    font-weight: bold;
-    padding: 0;
-    // padding-top: 1vh;
-    margin: 0;
-    text-align: center;
-  }
-}
+// .end {
+//   height: 12vh;
+//   background-color: lightblue;
+//   position: relative;
+//   .icon {
+//     height: 20px;
+//     width: 20px;
+//   }
+//   & .card {
+//     margin: 0;
+//     position: absolute;
+//     border-radius: 12px;
+//     padding: 25px;
+//     top: 50%;
+//     left: 50%;
+//     margin-right: -50%;
+//     transform: translate(-50%, -50%);
+//     height: 85vh;
+//     width: 92vw;
+//     // margin: 20px;
+//     background-color: #ffffff;
+//     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+//     transition: 0.3s;
+//   }
+//   & .header_title {
+//     font-size: 1.5em;
+//     font-weight: bold;
+//     padding: 0;
+//     // padding-top: 1vh;
+//     margin: 0;
+//     text-align: center;
+//   }
+// }
+
 .header_holder {
   position: absolute;
   left: 0;
@@ -226,7 +265,7 @@ $secondary-color: rgb(255, 173, 173);
     cursor: pointer;
   }
 }
-.header_link{
+.header_link {
   margin-top: 0;
   // padding-left: 21px;
   padding-right: 21px;
@@ -239,12 +278,32 @@ $secondary-color: rgb(255, 173, 173);
   font-size: 2em;
   margin-top: 10px;
   margin-bottom: 20px;
-  background-color: #ffffff;
+  background-color: #fffea8;
   .links {
-    font-size: clamp(0.55em, 2vw, 2em);
+    font-size: clamp(0.49em, 2vw, 2em);
     white-space: nowrap;
     text-align: center;
     cursor: pointer;
     // border: 3px solid green;
   }
+}
+
+//SCROLL
+.menu-item {
+  padding: 0 40px;
+  margin: 5px 10px;
+  user-select: none;
+  cursor: pointer;
+  border: none;
+}
+.menu-item-wrapper.active {
+  border: 1px blue solid;
+}
+.menu-item.active {
+  border: 1px green solid;
+}
+
+.scroll-menu-arrow {
+  padding: 20px;
+  cursor: pointer;
 }
