--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -1,11 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Georama:wght@100&family=Gidugu&family=Happy+Monkey&family=Londrina+Shadow&family=Potta+One&display=swap");
-html {
-  background-color: #fff3e2;
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=PT+Serif:wght@700&display=swap");
+.rutgers {
+  font-family: "PT Serif";
+  color: red;
 }
 
 .button {
-  background-color: #4caf50;
-  /* Green */
+  background-color: #4caf50; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -15,52 +18,43 @@ html {
   font-size: 16px;
 }
 
-.header_holder, .header_holder--responsive {
+.header-holder, .header-holder--responsive {
   position: absolute;
   left: 0;
   top: 0;
   margin-left: 30px;
 }
-
-.header_logo {
+.header-logo {
   font-size: 10em;
-  color: #ff9f6f;
+  color: rgb(255, 159, 111);
   font-family: "Potta One", cursive;
 }
 
-.header_links_col {
+.header-links-col {
   font-size: 1.5em;
   margin-top: 80px;
 }
-
-.header_links_col .links {
+.header-links-col .links {
   font-size: clamp(0.55em, 2vw, 1.25em);
   white-space: nowrap;
   cursor: pointer;
 }
 
-.header_link {
+.header-link {
   font-size: 2em;
   white-space: nowrap;
   cursor: pointer;
 }
 
-.header_links_sticky_container {
+.header-links-sticky-container {
   font-size: 2em;
-  background-color: #ff9f6f;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  background-color: rgb(255, 159, 111);
   display: flex;
   height: 64px;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
-
-.header_links_sticky_container .header_links_sticky_item .links {
+.header-links-sticky-container .header-links-sticky-item .links {
   color: white;
   font-size: clamp(0.49em, 2vw, 2em);
   white-space: nowrap;
@@ -68,145 +62,164 @@ html {
   cursor: pointer;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-image: url("../assets/background.jpg");
+  background-attachment: fixed;
+}
+.wrapper .background-logo {
+  width: "50px";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+@-webkit-keyframes move {
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes move {
+  to {
+    transform: translateX(-100%);
+  }
+}
 .landing {
-  background-color: #fff3e2;
-  height: 91.5vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: column;
+  max-width: 1280px;
 }
-
-.landing .header_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
+.landing .intro {
+  background-color: rgb(252, 242, 234);
+  height: 93.5vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas: "roll roll roll roll roll roll roll roll roll roll" "header header header header header header header header header header" ". . . . . . . . . ." ". . . main main main main main main ." ". . . main main main main main main ." ". . . main main main main main main ." ". . . main main main main main main ." ". . . . . . . . . ." ". . . . . . . . . ." ". . . . footer footer . . . .";
+}
+.landing .intro .bar {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  grid-area: roll;
+  background-color: black;
+  font-size: 18px;
+  overflow: hidden;
+}
+.landing .intro .bar .bar-content {
+  display: block; /* Important to give the content a width */
+  color: white;
+  width: 100%;
+  font-family: "Potta One";
+  transform: translateX(100%); /* Animation start out of the screen */
+  -webkit-animation: move 20s linear infinite;
+          animation: move 20s linear infinite;
+  white-space: nowrap;
+}
+.landing .intro .header-container {
   height: 200px;
-}
-
-.landing .header_container .header_logo {
-  font-size: 10em;
-  color: #ff9f6f;
-  margin-top: 40px;
-  font-family: "Potta One", cursive;
-}
-
-.landing .header_container .header_links_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
+  grid-area: header;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
-
-.landing .header_container .header_links_container .header_links {
+.landing .intro .header-container .header-logo {
+  font-size: 15em;
+  color: rgb(255, 159, 111);
+  margin: 5rem 1rem;
+  font-family: "Potta One", cursive;
+  cursor: default;
+}
+.landing .intro .header-container .header-links-container {
+  cursor: pointer;
+}
+.landing .intro .header-container .header-links-container .header-links {
   font-size: 2em;
 }
-
-.landing .introduction {
-  margin-top: 15vh;
-  margin-left: 40px;
+.landing .intro .para-wrapper {
+  margin-top: 50px;
+  grid-area: main;
+  justify-self: center;
+  background-color: white;
+  border-radius: 30px;
+  box-shadow: 10px 10px 5px lightblue;
 }
-
-.landing .introduction .paragraph {
-  width: 75%;
+.landing .intro .para-wrapper .para-header {
+  font-family: "Montserrat";
+  font-weight: 500;
+  margin-top: 1rem;
+  margin-left: 3rem;
+  font-size: 3em;
+}
+.landing .intro .para-wrapper .paragraph {
+  font-family: "Work Sans", sans-serif;
+  margin-left: 3rem;
+  margin-right: 3rem;
   font-size: 1.7em;
-  font-weight: bold;
   font-size: clamp(1em, 3vw, 2em);
 }
-
-.landing .introduction .icon_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.landing .intro .contact-container {
+  margin-bottom: 2rem;
+  grid-area: footer;
+  justify-content: center;
   display: flex;
-  gap: 10px;
+  flex-direction: column;
+  align-items: center;
 }
-
-.landing .introduction .icon_container .icon_link {
-  -ms-flex-negative: 3;
-      flex-shrink: 3;
+.landing .intro .contact-container .contact-text {
+  font-size: 2em;
+  margin-bottom: 1rem;
 }
-
-.landing .introduction .icon_container .icon_link .icon {
+.landing .intro .contact-container .icon-container {
+  display: flex;
+  flex-direction: row;
+  gap: 0.25rem;
+}
+.landing .intro .contact-container .icon-container .icon-link .icon {
   height: 40px;
-  fill: #ff9f6f;
+  fill: rgb(255, 159, 111);
 }
-
-.landing .introduction .icon_container .icon_link .link {
+.landing .intro .contact-container .icon-container .icon-link .link {
   font-size: 3em;
 }
 
-.my_projects {
+.my-projects {
   height: 93vh;
-  background-color: #fff3e2;
+  background-color: rgb(252, 242, 234);
   overflow: auto;
 }
-
-.my_projects .header_title {
+.my-projects .header-title {
   font-size: clamp(5em, 6vw, 8em);
   padding-top: 20px;
   padding-left: 30px;
 }
-
-.my_projects .container {
+.my-projects .container {
   padding-left: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   gap: 10px;
 }
-
-.my_projects .container .item .link_header {
-  color: #ff9f6f;
+.my-projects .container .item .link-header {
+  color: rgb(255, 159, 111);
   font-family: "Potta One", cursive;
   font-size: 2.5em;
 }
-
-.my_projects .container .item .info {
+.my-projects .container .item .info {
   width: 75%;
   font-size: 1.5em;
   margin-left: 10px;
 }
-
-.my_projects .container .link {
+.my-projects .container .link {
   cursor: pointer;
   font-size: 1.5em;
 }
 
 .interactive {
   height: 93vh;
-  background-color: #fff3e2;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  background-color: rgb(252, 242, 234);
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
-
 .interactive .card {
   display: block;
   margin-left: auto;
@@ -216,85 +229,62 @@ html {
   margin-right: 20px;
   margin-bottom: 20px;
   padding: 5px;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  background-color: #ffba97;
-  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
-          box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
-  -webkit-transition: 0.3s;
+  flex-grow: 1;
+  background-color: rgb(255, 186, 151);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   text-align: center;
 }
-
-.interactive .header_title {
+.interactive .header-title {
   font-size: clamp(5em, 6vw, 8em);
   padding-top: 20px;
   padding-left: 30px;
 }
-
-.interactive .text_area_holder {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.interactive .text-area-holder {
   display: flex;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
+  align-items: stretch;
   height: 20vw;
 }
-
-.interactive .text_area_holder .text_area {
+.interactive .text-area-holder .text-area {
   margin: 5px;
   border-radius: 12px;
   resize: none;
-  -webkit-box-flex: 2;
-      -ms-flex-positive: 2;
-          flex-grow: 2;
+  flex-grow: 2;
   padding: 10px;
   font-size: x-large;
   text-transform: uppercase;
-  background-color: #fff8ef;
+  background-color: rgb(255, 248, 239);
 }
-
-.interactive .text_area_holder .text_area:hover {
-  background-color: #ffe9de;
+.interactive .text-area-holder .text-area:hover {
+  background-color: rgb(255, 233, 222);
   border-radius: 12px;
 }
-
-.interactive .text_area_holder .text_area:focus {
+.interactive .text-area-holder .text-area:focus {
   outline: none;
   border-radius: 12px;
-  background-color: #ffe9de;
+  background-color: rgb(255, 233, 222);
 }
-
-.interactive .text_area_holder_responsive {
+.interactive .text-area-holder-responsive {
   margin: 5px;
   border-radius: 12px;
   resize: none;
-  -webkit-box-flex: 2;
-      -ms-flex-positive: 2;
-          flex-grow: 2;
+  flex-grow: 2;
   padding: 10px;
   font-size: x-large;
   text-transform: uppercase;
-  background-color: #fff8ef;
+  background-color: rgb(255, 248, 239);
 }
-
-.interactive .text_area_holder_responsive:hover {
-  background-color: #ffe9de;
+.interactive .text-area-holder-responsive:hover {
+  background-color: rgb(255, 233, 222);
   border-radius: 12px;
 }
-
-.interactive .text_area_holder_responsive:focus {
+.interactive .text-area-holder-responsive:focus {
   border-radius: 12px;
-  background-color: #ffe9de;
+  background-color: rgb(255, 233, 222);
 }
-
-.interactive .morse_helper_header {
+.interactive .morse-helper-header {
   font-size: clamp(2em, 6vw, 3em);
 }
-
-.interactive .morse_helper_text {
+.interactive .morse-helper-text {
   font-size: clamp(1rem, 2.5vw, 1.5rem);
-}
-/*# sourceMappingURL=stylesheet.css.map */
+}/*# sourceMappingURL=stylesheet.css.map */
