--- a/src/css/stylesheet.scss
+++ b/src/css/stylesheet.scss
@@ -3,24 +3,36 @@ $logo-color: rgb(255, 159, 111);
 
 $primary-color: rgb(255, 0, 0);
 $secondary-color: rgb(255, 233, 223);
-$background-color: rgb(255, 240, 233);
-$background-color: rgb(255, 243, 226);
+$background-color:rgb(252, 242, 234);
 
 $sticky-links: rgb(255, 173, 173);
 $sticky-links-background-color: rgb(255, 159, 111);
 $sticky-text-color: white;
-
 $interactive-card-color: rgb(255, 186, 151);
 $interactive-card-textholder-color: rgb(255, 248, 239);
 $interactive-card-textholder-focus-color: rgb(255, 233, 222);
 $interactive-card-textholder-active-color: white;
 $interactive-card-textholder-hover-color: rgb(255, 233, 222);
 
+// fonts
+// @font-face {
+//   font-family: "Jiro";
+//   src: url('./font/jiro.otf') format('otf');
+// }
+// @font-face {
+//   font-family: "Wonky";
+//   src: url('./font/wonky.otf') format('otf');
+// }
 @import url("https://fonts.googleapis.com/css2?family=Georama:wght@100&family=Gidugu&family=Happy+Monkey&family=Londrina+Shadow&family=Potta+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=PT+Serif:wght@700&display=swap');
 
-html {
-  background-color: $background-color;
+.rutgers{
+  font-family: "PT Serif";
+  color: red;
 }
+
 .button {
   background-color: #4caf50; /* Green */
   border: none;
@@ -31,25 +43,24 @@ html {
   display: inline-block;
   font-size: 16px;
 }
-.header_holder {
+
+.header-holder {
   position: absolute;
   left: 0;
   top: 0;
   margin-left: 30px;
   &--responsive {
-    @extend .header_holder;
+    @extend .header-holder;
   }
 }
-.header_logo {
+
+.header-logo {
   font-size: 10em;
   color: $logo-color;
-  // font-family: 'Georama', sans-serif;
-  // font-family: 'Gidugu', sans-serif;
-  // font-family: 'Happy Monkey', cursive;
-  // font-family: 'Londrina Shadow', cursive;
   font-family: "Potta One", cursive;
 }
-.header_links_col {
+
+.header-links-col {
   font-size: 1.5em;
   margin-top: 80px;
   .links {
@@ -58,101 +69,171 @@ html {
     cursor: pointer;
   }
 }
-.header_link {
-  // margin-top: 0;
-  // padding-left: 21px;
-  // padding-right: 21px;
+
+.header-link {
   font-size: 2em;
-  // font-size: clamp(0.55em, 2vw, 1.25em);
   white-space: nowrap;
   cursor: pointer;
 }
-.header_links_sticky_container {
+
+.header-links-sticky-container {
   font-size: 2em;
   background-color: $sticky-links-background-color;
   display: flex;
   height: 64px;
   justify-content: space-evenly;
   align-items: center;
-  // margin-top: 10px;
-  // margin-bottom: 20px;
-  .header_links_sticky_item {
+  .header-links-sticky-item {
     .links {
       color: $sticky-text-color;
       font-size: clamp(0.49em, 2vw, 2em);
       white-space: nowrap;
       text-align: center;
       cursor: pointer;
-      // border: 3px solid green;
     }
   }
 }
 
-.landing {
-  background-color: $background-color;
-  height: 91.5vh;
+.wrapper{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-image: url('../assets/background.jpg');
+  background-attachment: fixed;
+  .background-logo{
+    width: "50px";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+  }
+}
+
+@keyframes move {
+  to { transform: translateX(-100%); }
+}
+
+
+
+.landing{
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  .header_container {
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    height: 200px;
-    .header_logo {
-      font-size: 10em;
-      color: $logo-color;
-      margin-top: 40px;
-      // font-family: 'Georama', sans-serif;
-      // font-family: 'Gidugu', sans-serif;
-      // font-family: 'Happy Monkey', cursive;
-      // font-family: 'Londrina Shadow', cursive;
-      font-family: "Potta One", cursive;
-    }
-    .header_links_container {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      .header_links {
-        font-size: 2em;
+  max-width: 1280px;
+  // max-width: 940px;
+  
+  .intro {
+    background-color: $background-color;
+    height: 93.5vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas: 
+    "roll roll roll roll roll roll roll roll roll roll"
+    "header header header header header header header header header header"
+    ". . . . . . . . . ."
+    ". . . main main main main main main ."
+    ". . . main main main main main main ."
+    ". . . main main main main main main ."
+    ". . . main main main main main main ."
+    ". . . . . . . . . ."
+    ". . . . . . . . . ."
+    ". . . . footer footer . . . .";
+    
+    .bar {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      grid-area: roll;
+      background-color: black;
+      font-size: 18px;
+      overflow: hidden;
+      & .bar-content {
+        display: block; /* Important to give the content a width */
+        color: white;
+        width: 100%;
+        font-family: "Potta One";
+        transform: translateX(100%); /* Animation start out of the screen */
+        animation: move 20s linear infinite;
+        white-space: nowrap; 
       }
     }
-  }
 
-  .introduction {
-    margin-top: 15vh;
-    margin-left: 40px;
-    .paragraph {
-      width: 75%;
-      font-size: 1.7em;
-      font-weight: bold;
-      font-size: clamp(1em, 3vw, 2em);
-    }
-    .icon_container {
+    .header-container {
+      height: 200px;
+      grid-area: header;
       display: flex;
-      gap: 10px;
-      .icon_link {
-        flex-shrink: 3;
-        .icon {
-          height: 40px;
-          fill: $logo-color;
-          // width: clamp(2em, 3.5vw, 4vw);
+      .header-logo {
+        font-size: 15em;
+        color: $logo-color;
+        margin: 5rem 1rem;
+        font-family: "Potta One", cursive;
+        cursor: default;
+      }
+      .header-links-container {
+        cursor: pointer;
+        .header-links {
+          font-size: 2em;
         }
-        .link {
-          font-size: 3em;
+      }
+    }
+
+    .para-wrapper{
+      margin-top: 50px;
+      grid-area: main;
+      justify-self: center;
+      background-color: white;
+      border-radius: 30px;
+      box-shadow: 10px 10px 5px lightblue;
+      .para-header{
+        font-family: "Montserrat";
+        font-weight: 500;
+        margin-top: 1rem;
+        margin-left: 3rem;
+        font-size: 3em;
+      }
+      .paragraph {
+        font-family: "Work Sans", sans-serif;;
+        // font-weight: 100;
+        // margin-top: 2rem;
+        margin-left: 3rem;
+        margin-right: 3rem;
+        font-size: 1.7em;
+        font-size: clamp(1em, 3vw, 2em);
+      }
+    }
+
+    .contact-container{ 
+      margin-bottom: 2rem;
+      grid-area: footer;
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .contact-text{
+        font-size: 2em;
+        margin-bottom: 1rem;
+      }
+      .icon-container {
+        display: flex;
+        flex-direction: row;
+        gap: 0.25rem;
+        .icon-link {
+          .icon {
+            height: 40px;
+            fill: $logo-color;
+          }
+          .link {
+            font-size: 3em;
+          }
         }
       }
     }
   }
 }
 
-.my_projects {
+.my-projects {
   height: 93vh;
   background-color: $background-color;
-  // position: relative;
   overflow: auto;
-
-  & .header_title {
+  & .header-title {
     font-size: clamp(5em, 6vw, 8em);
     padding-top: 20px;
     padding-left: 30px;
@@ -163,7 +244,7 @@ html {
     flex-direction: column;
     gap: 10px;
     .item {
-      .link_header {
+      .link-header {
         color: $logo-color;
         font-family: "Potta One", cursive;
         font-size: 2.5em;
@@ -201,17 +282,17 @@ html {
     transition: 0.3s;
     text-align: center;
   }
-  & .header_title {
+  & .header-title {
     font-size: clamp(5em, 6vw, 8em);
     padding-top: 20px;
     padding-left: 30px;
   }
-  & .text_area_holder {
+  & .text-area-holder {
     display: flex;
     align-items: stretch;
     height: 20vw;
     // height: clamp(5vw, 5vw, 40vw);
-    & .text_area {
+    & .text-area {
       margin: 5px;
       border-radius: 12px;
       resize: none;
@@ -231,7 +312,7 @@ html {
       }
     }
   }
-  & .text_area_holder_responsive {
+  & .text-area-holder-responsive {
     margin: 5px;
     border-radius: 12px;
     resize: none;
@@ -249,13 +330,10 @@ html {
       background-color: $interactive-card-textholder-focus-color;
     }
   }
-  & .morse_helper_header {
+  & .morse-helper-header {
     font-size: clamp(2em, 6vw, 3em);
   }
-  & .morse_helper_text {
-    // margin-left: auto;
-    // margin-right: auto;
-    // width: 20em;
+  & .morse-helper-text {
     font-size: clamp(1rem, 2.5vw, 1.5rem);
   }
 }
