--- a/src/css/stylesheet.scss
+++ b/src/css/stylesheet.scss
@@ -1,34 +1,25 @@
-$text-color: rgb(0, 0, 0);
-$logo-color: rgb(255, 159, 111);
+$orange-color: rgb(255, 159, 111);
+$lorange-color: rgb(255, 234, 224);
+$lblue-color: #d6e8f4;
+$blue-color: #c1daee;
 
 $primary-color: rgb(255, 0, 0);
 $secondary-color: rgb(255, 233, 223);
-$background-color:rgb(252, 242, 234);
+$background-color: rgb(252, 242, 234);
 
 $sticky-links: rgb(255, 173, 173);
 $sticky-links-background-color: rgb(255, 159, 111);
 $sticky-text-color: white;
-$interactive-card-color: rgb(255, 186, 151);
-$interactive-card-textholder-color: rgb(255, 248, 239);
-$interactive-card-textholder-focus-color: rgb(255, 233, 222);
-$interactive-card-textholder-active-color: white;
-$interactive-card-textholder-hover-color: rgb(255, 233, 222);
 
-// fonts
-// @font-face {
-//   font-family: "Jiro";
-//   src: url('./font/jiro.otf') format('otf');
-// }
-// @font-face {
-//   font-family: "Wonky";
-//   src: url('./font/wonky.otf') format('otf');
-// }
+$blue-card: #c1daee;
+$orange-card: #c1daee;
+
 @import url("https://fonts.googleapis.com/css2?family=Georama:wght@100&family=Gidugu&family=Happy+Monkey&family=Londrina+Shadow&family=Potta+One&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=PT+Serif:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=PT+Serif:wght@700&display=swap");
 
-.rutgers{
+.rutgers {
   font-family: "PT Serif";
   color: red;
 }
@@ -54,33 +45,13 @@ $interactive-card-textholder-hover-color: rgb(255, 233, 222);
   }
 }
 
-.header-logo {
-  font-size: 10em;
-  color: $logo-color;
-  font-family: "Potta One", cursive;
-}
 
-.header-links-col {
-  font-size: 1.5em;
-  margin-top: 80px;
-  .links {
-    font-size: clamp(0.55em, 2vw, 1.25em);
-    white-space: nowrap;
-    cursor: pointer;
-  }
-}
-
-.header-link {
-  font-size: 2em;
-  white-space: nowrap;
-  cursor: pointer;
-}
 
 .header-links-sticky-container {
   font-size: 2em;
-  background-color: $sticky-links-background-color;
-  display: flex;
   height: 64px;
+  background-color: $orange-color;
+  display: flex;
   justify-content: space-evenly;
   align-items: center;
   .header-links-sticky-item {
@@ -94,13 +65,13 @@ $interactive-card-textholder-hover-color: rgb(255, 233, 222);
   }
 }
 
-.wrapper{
+.wrapper {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-image: url('../assets/background.jpg');
+  background-image: url("../assets/background.jpg");
   background-attachment: fixed;
-  .background-logo{
+  .background-logo {
     width: "50px";
     position: absolute;
     top: 0px;
@@ -109,36 +80,35 @@ $interactive-card-textholder-hover-color: rgb(255, 233, 222);
 }
 
 @keyframes move {
-  to { transform: translateX(-100%); }
+  to {
+    transform: translateX(-50%);
+  }
 }
 
-.landing{
+.landing {
   display: flex;
   flex-direction: column;
   max-width: 1280px;
-  // max-width: 940px;
-  
+  min-width: 600px;
   .intro {
     background-color: $background-color;
-    display: grid;
-    grid-template-rows: auto auto auto 1fr 1fr 28rem;
+    display: inline-grid;
+    grid-template-rows: auto 14rem auto 1fr 1fr 21rem;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-areas: 
-    "roll roll roll roll roll roll roll roll roll roll"
-    "header header header header header header header header header header"
-    ". . . . . . . . . ."
-    ". . . main main main main main main ."
-    ". . . main main main main main main ."
-    ". . . . footer footer . . . .";
-    
+    grid-template-areas:
+      "roll roll roll roll roll roll roll roll roll roll"
+      "header header header header header header header header header header"
+      ". . . . . . . . . ."
+      ". . . main main main main main main ."
+      ". . . main main main main main main ."
+      ". . . . footer footer . . . .";
+
     .bar {
       padding-top: 1rem;
       padding-bottom: 1rem;
       grid-area: roll;
       background-color: black;
       overflow: hidden;
-      // background: repeating-linear-gradient( -45deg, #000 0px, #000 5px, #333 6px, #333 11px, #000 12px);
-
       & .bar-content {
         display: block;
         color: white;
@@ -148,37 +118,32 @@ $interactive-card-textholder-hover-color: rgb(255, 233, 222);
         font-size: 3em;
         transform: translateX(100%);
         animation: move 20s linear infinite;
-        white-space: nowrap; 
+        white-space: nowrap;
       }
     }
 
     .header-container {
-      height: 200px;
       grid-area: header;
       display: flex;
+      justify-content: flex-start;
+      align-items: center;
       .header-logo {
         font-size: 15em;
-        color: $logo-color;
-        margin: 5rem 1rem;
+        color: $orange-color;
+        margin: 1rem 1rem;
         font-family: "Potta One", cursive;
         cursor: default;
       }
-      .header-links-container {
-        cursor: pointer;
-        .header-links {
-          font-size: 2em;
-        }
-      }
     }
 
-    .para-wrapper{
+    .para-wrapper {
       margin-top: 50px;
       grid-area: main;
       justify-self: center;
       background-color: white;
       border-radius: 30px;
       box-shadow: 10px 10px 5px lightblue;
-      .para-header{
+      .para-header {
         font-family: "Montserrat";
         font-weight: 500;
         margin-top: 1rem;
@@ -186,9 +151,7 @@ $interactive-card-textholder-hover-color: rgb(255, 233, 222);
         font-size: 3em;
       }
       .paragraph {
-        font-family: "Work Sans", sans-serif;;
-        // font-weight: 100;
-        // margin-top: 2rem;
+        font-family: "Work Sans", sans-serif;
         margin-left: 3rem;
         margin-right: 3rem;
         padding-bottom: 1rem;
@@ -197,14 +160,14 @@ $interactive-card-textholder-hover-color: rgb(255, 233, 222);
       }
     }
 
-    .contact-container{ 
+    .contact-container {
       margin-bottom: 2rem;
       grid-area: footer;
       justify-content: flex-end;
       display: flex;
       flex-direction: column;
       align-items: center;
-      .contact-text{
+      .contact-text {
         font-size: 2em;
         margin-bottom: 1rem;
       }
@@ -215,7 +178,7 @@ $interactive-card-textholder-hover-color: rgb(255, 233, 222);
         .icon-link {
           .icon {
             height: 40px;
-            fill: $logo-color;
+            fill: $orange-color;
           }
           .link {
             font-size: 3em;
@@ -241,7 +204,7 @@ $interactive-card-textholder-hover-color: rgb(255, 233, 222);
     gap: 10px;
     .item {
       .link-header {
-        color: $logo-color;
+        color: $orange-color;
         font-family: "Potta One", cursive;
         font-size: 2.5em;
       }
@@ -259,109 +222,85 @@ $interactive-card-textholder-hover-color: rgb(255, 233, 222);
 }
 
 .interactive {
+  height: 65rem;
   background-color: $background-color;
   display: flex;
   flex-direction: column;
-  & .card {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 12px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    padding: 5px;
-    flex-grow: 1;
-    background-color: $interactive-card-color;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    text-align: center;
-  }
-  & .header-title {
+  .header-title {
     font-size: clamp(5em, 6vw, 8em);
     padding-top: 20px;
     padding-left: 30px;
   }
-  & .text-area-holder {
-    display: flex;
-    align-items: stretch;
-    height: 20vw;
-    // height: clamp(5vw, 5vw, 40vw);
-    & .text-area {
-      margin: 5px;
-      border-radius: 12px;
-      resize: none;
-      flex-grow: 2;
-      padding: 10px;
-      font-size: x-large;
-      text-transform: uppercase;
-      background-color: $interactive-card-textholder-color;
-      &:hover {
-        background-color: $interactive-card-textholder-hover-color;
-        border-radius: 12px;
-      }
-      &:focus {
-        outline: none;
-        border-radius: 12px;
-        background-color: $interactive-card-textholder-focus-color;
+  .test {
+    background-color: $background-color;
+    .swiper {
+      width: 100%;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      .swiper-slide {
+        background-position: center;
+        height: 30rem;
+        width: 30rem;
+        overflow: hidden;
+        border-radius: 30px;
+
+        .slide-content {
+          width: 100%;
+          height: 100%;
+          -drag: none;
+          user-select: none;
+          -moz-user-select: none;
+          -webkit-user-drag: none;
+          -webkit-user-select: none;
+          -ms-user-select: none;
+          text-align: center;
+          object-fit: fill;
+        }
       }
     }
   }
-  & .text-area-holder-responsive {
-    margin: 5px;
-    border-radius: 12px;
+}
+
+.card {
+  height: 30rem;
+  background-color: $orange-color;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-content: stretch;
+  .title {
+    margin: 10px 20px 0px 20px;
+    font-size: 2.5em;
+    font-family: "Montserrat";
+    color: white;
+  }
+  .text-area {
+    height: 5rem;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 15px 15px 15px 15px;
     resize: none;
-    flex-grow: 2;
-    padding: 10px;
-    font-size: x-large;
+    padding-top: 10px;
+    padding-left: 10px;
+    font-size: 1.5em;
     text-transform: uppercase;
-    background-color: $interactive-card-textholder-color;
+    background-color: white;
     &:hover {
-      background-color: $interactive-card-textholder-hover-color;
-      border-radius: 12px;
+      background-color: white;
     }
     &:focus {
-      border-radius: 12px;
-      background-color: $interactive-card-textholder-focus-color;
+      background-color: white;
     }
   }
-  & .morse-helper-header {
-    font-size: clamp(2em, 6vw, 3em);
-  }
-  & .morse-helper-text {
-    font-size: clamp(1rem, 2.5vw, 1.5rem);
+  .morse-helper-text {
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    font-size: 1.6em;
+    font-weight: bold;
   }
 }
 
-.test {
-  height: 90vh;
-  background-color: $background-color;
-  // display: flex;
-  // justify-content: center;
-  // background-size: cover;
-  .swiper {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    .swiper-slide {
-      background-position: center;
-      height: 30rem;
-      width: 30rem;
-      overflow: hidden;
-      border-radius: 30px;
-      .slide-content{
-        width:100%; 
-        height:100%;
-        -drag: none;
-        user-select: none;
-        -moz-user-select: none;
-        -webkit-user-drag: none;
-        -webkit-user-select: none;
-        -ms-user-select: none;
-        text-align: center;
-        object-fit: fill;
-      }
-    }
-  }
+.footer {
 }
-
